# docvault

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTERNAL.md  PRODUCTION_DEPLOYMENT.md  README.md  SPEC.md  docker-build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: .gitignore  README.md  calibrate_gate.py  download_corpus.py  generate_dataset.py  judges.py  run_benchmark.py
corpus/: benefits-overview.md  code-of-conduct.md  communication-guidelines.md  expense-policy.md  hiring-process.md  onboarding-guide.md  performance-reviews.md  pto-policy.md  remote-work-policy.md  security-practices.md
dashboards/: alerts.yml  grafana.json  prometheus.yml
dashboards/grafana/provisioning/dashboards/: provider.yml
dashboards/grafana/provisioning/datasources/: prometheus.yml
deploy/: cloudformation.yml
deploy/ecs/: service.json  task-definition.json
docker/: install-runtime-deps.py
eval/: golden_dataset.json
scripts/: export_onnx.py
src/docvault/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  observability.py  pipeline.py  worker.py
src/docvault/generation/: generator.py  prompts.py  verifier.py
src/docvault/ingest/: chunker.py  embedder.py  parser.py
src/docvault/memory/: cache.py  session.py
src/docvault/ragops/: drift.py  evaluator.py  judge_eval.py  metrics.py  tracer.py
src/docvault/retrieval/: dense.py  dense_local.py  fusion.py  reranker.py  sparse.py
src/docvault/storage/: documents.py
src/docvault/storage/migrations/: 001_initial.py
tests/: test_chunker.py  test_eval.py  test_memory.py  test_retrieval.py  test_verifier.py
tests/fixtures/sample_docs/: employee-handbook.md  security-policy.md
