[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docvault"
version = "0.1.0"
description = "Industry-grade RAG pipeline for company policy Q&A"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Ingest
    "docling>=2.0",
    "markitdown>=0.1",
    # Embeddings & retrieval
    "lancedb>=0.15",
    "sentence-transformers>=3.0",
    # Reranking & NLI
    "transformers>=4.40",
    "torch>=2.0",
    # LLM
    "litellm>=1.40",
    # Memory & async
    "redis>=5.0",
    "celery>=5.3",
    # Metrics
    "prometheus-client>=0.20",
    # Eval
    "ragas>=0.2",
    # Utils
    "tiktoken>=0.7",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
docvault = "docvault.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/docvault"]

