[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docvault"
version = "0.2.0"
description = "Industry-grade RAG pipeline for company policy Q&A"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Ingest
    "docling>=2.0",
    "markitdown>=0.1",
    # Embeddings (OpenAI cloud API)
    "openai>=1.30",
    # Vector DB (Pinecone managed)
    "pinecone>=5.0",
    # Reranking & NLI (ONNX Runtime — no torch needed)
    "onnxruntime>=1.18",
    "transformers>=4.40",
    # LLM
    "litellm>=1.40",
    # Memory & async
    "redis>=5.0",
    "celery>=5.3",
    # Metrics & observability
    "prometheus-client>=0.20",
    "structlog>=24.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    # Eval
    "ragas>=0.2",
    # Utils
    "tiktoken>=0.7",
    "xxhash>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "pytest-cov>=5.0",
]
# For ONNX model export (run locally, not in production)
export = [
    "torch>=2.0",
    "sentence-transformers>=3.0",
    "optimum[onnxruntime]>=1.19",
]
# Local embedding fallback (if OpenAI latency is too high)
local = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[project.scripts]
docvault = "docvault.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/docvault"]

